force-app/main/default/objects/Quote/fields/ZRH_CotizacionDelHolding__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CotizacionDelHolding__c</fullName>
    <description>Campo utilizado para identificar las cotizaciones del holding y diferenciarlas de las cotizaciones de empresas independientes y dependientes de un holding</description>
    <formula>ISBLANK(ZRH_CotizacionHolding__c)</formula>
    <label>Cotización del Holding</label>
    <type>Checkbox</type>
</CustomField>