force-app/main/default/objects/Quote/fields/ZRH_CotizacionHolding__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CotizacionHolding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización Holding</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Cotizaciones Relacionadas</relationshipLabel>
    <relationshipName>ZRH_CotizacionHolding</relationshipName>
    <type>Lookup</type>
</CustomField>