force-app/main/default/objects/Quote/fields/ZRH_CreadoPorUsuario__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CreadoPorUsuario__c</fullName>
    <formula>IF( Opportunity.OwnerId= $User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creado por Usuario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>