force-app/main/default/objects/Quote/fields/ZRH_CualesPreexistencias__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CualesPreexistencias__c</fullName>
    <label>Cúales Preexistencias</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Hipertensión Arterial</fullName>
            </value>
            <value>
                <fullName>Hipotiroidismo</fullName>
            </value>
            <value>
                <fullName>Hipertiroidismo</fullName>
            </value>
            <value>
                <fullName>Tiroiditis</fullName>
            </value>
            <value>
                <fullName>Bocio</fullName>
            </value>
            <value>
                <fullName>Resistencia a la Insulina</fullName>
            </value>
            <value>
                <fullName>Intolerancia a la Glucosa</fullName>
            </value>
            <value>
                <fullName>Depresión</fullName>
            </value>
            <value>
                <fullName>Dermatitis</fullName>
            </value>
            <value>
                <fullName>Asma</fullName>
            </value>
            <value>
                <fullName>Psoriasis</fullName>
            </value>
            <value>
                <fullName>Estrabismo</fullName>
            </value>
            <value>
                <fullName>Escoliosis</fullName>
            </value>
            <value>
                <fullName>Hernia Lumbar</fullName>
            </value>
            <value>
                <fullName>Hernia Nucleo Pulposo</fullName>
            </value>
            <value>
                <fullName>Vitiligo</fullName>
            </value>
            <value>
                <fullName>Acné</fullName>
            </value>
            <value>
                <fullName>Rosácea</fullName>
            </value>
            <value>
                <fullName>Reflujo Gastroesofágico</fullName>
            </value>
            <value>
                <fullName>Soplos</fullName>
            </value>
            <value>
                <fullName>Rinitis</fullName>
            </value>
            <value>
                <fullName>Varices Extremidades Inferiores</fullName>
            </value>
            <value>
                <fullName>Tendinitis</fullName>
            </value>
            <value>
                <fullName>Discopatía Lumbar</fullName>
            </value>
            <value>
                <fullName>Enfermedad Diverticular</fullName>
            </value>
            <value>
                <fullName>Varicoceles</fullName>
            </value>
            <value>
                <fullName>Osteopenia</fullName>
            </value>
            <value>
                <fullName>Osteoporosis</fullName>
            </value>
            <value>
                <fullName>Colitis Ulcerosa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>