force-app/main/default/objects/Quote/fields/ZRH_CualesPreexistenciasLectura__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CualesPreexistenciasLectura__c</fullName>
    <label>CualesPreexistenciasLectura</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>