force-app/main/default/objects/Quote/fields/ZRH_CubrePreexistencias__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CubrePreexistencias__c</fullName>
    <label>Cubre Preexistencias</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>