force-app/main/default/objects/Quote/fields/ZRH_CuentasDEF__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CuentasDEF__c</fullName>
    <description>Campo para almacenar la información de las cuentas DEF.</description>
    <label>Cuentas DEF</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>