force-app/main/default/objects/Quote/fields/ZRH_EjecutivoPropietario__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EjecutivoPropietario__c</fullName>
    <description>Indica el ejecutivo propietario de esta cotización</description>
    <formula>Opportunity.Owner.FirstName&amp;&quot; &quot;&amp;Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ejecutivo Propietario</label>
    <type>Text</type>
</CustomField>