force-app/main/default/objects/Quote/fields/ZRH_EsLicitacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EsLicitacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo marcado cuando Es Licitación</description>
    <label>Es Licitación</label>
    <type>Checkbox</type>
</CustomField>