force-app/main/default/objects/Quote/fields/ZRH_EsPipeline__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EsPipeline__c</fullName>
    <description>Campo que indica si la cuenta de esta cotización es pipeline</description>
    <formula>Opportunity.Account.ZRH_EsPipeline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Pipeline</label>
    <type>Checkbox</type>
</CustomField>