force-app/main/default/objects/Quote/fields/ZRH_EstadoSolicitud__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EstadoSolicitud__c</fullName>
    <formula>IF(ISPICKVAL(Status,&apos;E-08&apos;),&quot;Recotizar&quot;,IF(ISPICKVAL(Status,&apos;E-05&apos;),&quot;Cotizada&quot;,IF(ISPICKVAL(Status,&apos;E-06&apos;),&quot;Declinada&quot;,IF(OR(ISPICKVAL(Status,&apos;E-02&apos;),ISPICKVAL(Status,&apos;E-03&apos;),ISPICKVAL(Status,&apos;E-04&apos;)),&quot;Pendiente de Cotizar&quot;,IF(ISPICKVAL(Status,&apos;E-09&apos;),&quot;Ganada&quot;,&quot;Perdida&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado Solicitud</label>
    <type>Text</type>
</CustomField>