force-app/main/default/objects/Quote/fields/ZRH_EstadoSubEstado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EstadoSubEstado__c</fullName>
    <description>Campo para mostrar Estado y Subestado como un campo concatenado no editable por el usuario</description>
    <formula>IF(
 ISBLANK(ZRH_ValoresSubEstado__c), 
				    ZRH_ValoresEstado__c,
				        ZRH_ValoresEstado__c + &quot; - &quot; + ZRH_ValoresSubEstado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>