force-app/main/default/objects/Quote/fields/ZRH_FechaHoraRespuestaAPIPDF__c.field-meta.xml
<CustomField>
    <fullName>ZRH_FechaHoraRespuestaAPIPDF__c</fullName>
    <description>Almacena Fecha/hora de la respuesta del servicio de generación de PDF.</description>
    <label>Fecha/Hora Respuesta API PDF</label>
    <type>DateTime</type>
</CustomField>