force-app/main/default/objects/Quote/fields/ZRH_FechaLimitePregunta__c.field-meta.xml
<CustomField>
    <fullName>ZRH_FechaLimitePregunta__c</fullName>
    <description>Fecha limite de preguntas</description>
    <label>Fecha Límite Pregunta</label>
    <type>Date</type>
</CustomField>