force-app/main/default/objects/Quote/fields/ZRH_FechaOficializacionContrato__c.field-meta.xml
<CustomField>
    <fullName>ZRH_FechaOficializacionContrato__c</fullName>
    <formula>Contract.StartDate</formula>
    <label>Fecha de oficialización contrato</label>
    <type>Date</type>
</CustomField>