force-app/main/default/objects/Quote/fields/ZRH_FechaSolicitudEntrega__c.field-meta.xml
<CustomField>
    <fullName>ZRH_FechaSolicitudEntrega__c</fullName>
    <description>Fecha de solicitud de entrega de la cotización</description>
    <label>Fecha Solicitud Entrega</label>
    <type>Date</type>
</CustomField>