force-app/main/default/objects/Quote/fields/ZRH_GenerandoPDF__c.field-meta.xml
<CustomField>
    <fullName>ZRH_GenerandoPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bandera que indica si un proceso de generación de PDF se encuentra en proceso.</description>
    <label>Generando PDF</label>
    <type>Checkbox</type>
</CustomField>