force-app/main/default/objects/Quote/fields/ZRH_Holding__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Holding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo relación a cuenta Holding</description>
    <label>Holding</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Holding)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>