force-app/main/default/objects/Quote/fields/ZRH_IdJobCreacionPolizas__c.field-meta.xml
<CustomField>
    <fullName>ZRH_IdJobCreacionPolizas__c</fullName>
    <label>Id Job Creación Pólizas</label>
    <length>18</length>
    <type>Text</type>
</CustomField>