force-app/main/default/objects/Quote/fields/ZRH_IndicadorAPE__c.field-meta.xml
<CustomField>
    <fullName>ZRH_IndicadorAPE__c</fullName>
    <label>Prima Total Anual (C)</label>
    <summarizedField>QuoteLineItem.ZRH_IndicadorAPE__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>