force-app/main/default/objects/Quote/fields/ZRH_MensajeRespuestaAPIPDF__c.field-meta.xml
<CustomField>
    <fullName>ZRH_MensajeRespuestaAPIPDF__c</fullName>
    <label>Mensaje Respuesta API PDF</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>