force-app/main/default/objects/Quote/fields/ZRH_MesCreacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_MesCreacion__c</fullName>
    <formula>TEXT(Year(DATEVALUE(CreatedDate))) &amp; CASE(MONTH(DATEVALUE(CreatedDate)),
1, &quot;01&quot;,
2, &quot;02&quot;,
3, &quot;03&quot;, 
4, &quot;04&quot;, 
5, &quot;05&quot;, 
6, &quot;06&quot;,
7, &quot;07&quot;,
8, &quot;08&quot;,
9, &quot;09&quot;,
10, &quot;10&quot;,
11, &quot;11&quot;,
12, &quot;12&quot;,
&quot;None&quot;)</formula>
    <label>Mes Creación</label>
    <type>Text</type>
</CustomField>