force-app/main/default/objects/Quote/fields/ZRH_Moneda__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Moneda__c</fullName>
    <description>Moneda de cotización</description>
    <label>Moneda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UF</fullName>
                <default>true</default>
                <label>UF</label>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>