force-app/main/default/objects/Quote/fields/ZRH_NivelAsistencia__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NivelAsistencia__c</fullName>
    <label>Nivel Asistencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grupo de Negocio</fullName>
            </value>
            <value>
                <fullName>Contratante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>