force-app/main/default/objects/Quote/fields/ZRH_NivelDeCoberturaEnElExterior__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NivelDeCoberturaEnElExterior__c</fullName>
    <label>Nivel de Cobertura en el Exterior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grupo de Negocio</fullName>
            </value>
            <value>
                <fullName>Contratante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>