force-app/main/default/objects/Quote/fields/ZRH_NombreCorredor__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NombreCorredor__c</fullName>
    <formula>vlocity_ins__AgencyBrokerageId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Corredor</label>
    <type>Text</type>
</CustomField>