force-app/main/default/objects/Quote/fields/ZRH_NombreCortoCuenta__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NombreCortoCuenta__c</fullName>
    <description>Muestra los primeros 20 caracteres de la cuenta relacionada.</description>
    <formula>HYPERLINK(&quot;/&quot;+ Opportunity.AccountId ,IF( LEN(Opportunity.Account.Name) &lt; 21, Opportunity.Account.Name,  LEFT(Opportunity.Account.Name, 20)  ), &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Corto Cuenta</label>
    <type>Text</type>
</CustomField>