force-app/main/default/objects/Quote/fields/ZRH_NombreHolding__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NombreHolding__c</fullName>
    <description>Campo de Texto que muestra el nombre de holding en formato link (utilizado en flow &quot;Cambiar Estado Cotizacion&quot;)</description>
    <formula>HYPERLINK(&quot;/&quot;+ Opportunity.AccountId,ZRH_Holding__r.Name,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Holding</label>
    <type>Text</type>
</CustomField>