force-app/main/default/objects/Quote/fields/ZRH_NroAsegurados__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NroAsegurados__c</fullName>
    <description>Cantidad de asegurados de cotización</description>
    <label>Número Asegurados</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>