force-app/main/default/objects/Quote/fields/ZRH_NumeroDiasLibrePreexistencias__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NumeroDiasLibrePreexistencias__c</fullName>
    <inlineHelpText>Número de días al cual se libera la preexistencia</inlineHelpText>
    <label>Número de Días</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>