force-app/main/default/objects/Quote/fields/ZRH_NumeroQuote__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NumeroQuote__c</fullName>
    <description>Campo para concatenar auto numerico con la version de una quote , para la generacion del valor unico de identificación de la quote</description>
    <formula>ZRH_AutoNumeroQuote__c  &amp; &quot;-V&quot;  &amp;  TEXT(ZRH_VersionQuote__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número cotización</label>
    <type>Text</type>
</CustomField>