force-app/main/default/objects/Quote/fields/ZRH_Observaciones__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Observaciones__c</fullName>
    <description>Observaciones agregadas por el ejecutivo comercial al crear una cotización</description>
    <label>Observaciones</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>