force-app/main/default/objects/Quote/fields/ZRH_Origen__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Origen__c</fullName>
    <description>Campo para identificar el origen de la solicitud (Reserva o Cotización)</description>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reserva</fullName>
            </value>
            <value>
                <fullName>Cotización</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>