force-app/main/default/objects/Quote/fields/ZRH_PDFCreado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_PDFCreado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF Creado</label>
    <type>Checkbox</type>
</CustomField>