force-app/main/default/objects/Quote/fields/ZRH_PolizasPorRenovar__c.field-meta.xml
<CustomField>
    <fullName>ZRH_PolizasPorRenovar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marca una vez que el llamado al API Oficialización Polizas Renovación sea satisfactorio.</description>
    <label>Exito Ofic. Pólizas Renovación</label>
    <type>Checkbox</type>
</CustomField>