force-app/main/default/objects/Quote/fields/ZRH_PrimaTarget__c.field-meta.xml
<CustomField>
    <fullName>ZRH_PrimaTarget__c</fullName>
    <description>Prima Target ingresada en cotización</description>
    <label>Prima Target</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>