force-app/main/default/objects/Quote/fields/ZRH_PrimaTotalSaludContratante__c.field-meta.xml
<CustomField>
    <fullName>ZRH_PrimaTotalSaludContratante__c</fullName>
    <description>Prima total anualizada de las planes de Salud para una cotización del tipo contratante</description>
    <label>Prima Total Anual Salud (C)</label>
    <summarizedField>QuoteLineItem.ZRH_IndicadorAPE__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ZRH_TipoTarifa__c</field>
        <operation>notEqual</operation>
        <value>4</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.ZRH_TipoTarifa__c</field>
        <operation>notEqual</operation>
        <value>6</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>