force-app/main/default/objects/Quote/fields/ZRH_PrimaTotalVidaContratante__c.field-meta.xml
<CustomField>
    <fullName>ZRH_PrimaTotalVidaContratante__c</fullName>
    <description>Prima total anualizada de los planes de Vida para una cotización del tipo contratante</description>
    <label>Prima Total Anual Vida (C)</label>
    <summarizedField>QuoteLineItem.ZRH_IndicadorAPE__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ZRH_TipoTarifa__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.ZRH_TipoTarifa__c</field>
        <operation>notEqual</operation>
        <value>2</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.ZRH_TipoTarifa__c</field>
        <operation>notEqual</operation>
        <value>3</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.ZRH_TipoTarifa__c</field>
        <operation>notEqual</operation>
        <value>7</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.ZRH_TipoTarifa__c</field>
        <operation>notEqual</operation>
        <value>9</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>