force-app/main/default/objects/Quote/fields/ZRH_Productos__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Productos__c</fullName>
    <description>Campo para indicar aquellos Productos que deban contemplarse para la cotización</description>
    <label>Productos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>500</fullName>
                <label>Vida</label>
            </value>
            <value>
                <fullName>501</fullName>
                <label>Vida Escolaridad</label>
            </value>
            <value>
                <fullName>502</fullName>
                <label>Vida Protección Familiar</label>
            </value>
            <value>
                <fullName>600</fullName>
                <label>Salud</label>
            </value>
            <value>
                <fullName>601</fullName>
                <label>Oncológico</label>
            </value>
            <value>
                <fullName>602</fullName>
                <label>Catastrófico</label>
            </value>
            <value>
                <fullName>603</fullName>
                <label>Gasto Médico Mayor</label>
            </value>
            <value>
                <fullName>604</fullName>
                <label>Salud Stop Loss</label>
            </value>
            <value>
                <fullName>605</fullName>
                <label>Dental</label>
            </value>
            <value>
                <fullName>606</fullName>
                <label>Dental Stop Loss</label>
            </value>
            <value>
                <fullName>700</fullName>
                <label>Accidentes Personales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>