force-app/main/default/objects/Quote/fields/ZRH_QuoteGanada__c.field-meta.xml
<CustomField>
    <fullName>ZRH_QuoteGanada__c</fullName>
    <formula>CASE(ZRH_EstadoSolicitud__c,&apos;Ganada&apos;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Ganada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>