force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceActivarGlosas__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceActivarGlosas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activar Glosas</label>
    <type>Checkbox</type>
</CustomField>