force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceAntecedentesGenerales__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceAntecedentesGenerales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Antecedentes Generales</label>
    <type>Checkbox</type>
</CustomField>