force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceBMI__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceBMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BMI</label>
    <type>Checkbox</type>
</CustomField>