force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceCapitalCoberturas__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceCapitalCoberturas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capital y Coberturas</label>
    <type>Checkbox</type>
</CustomField>