force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceCoberturaExterior__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceCoberturaExterior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobertura en el Exterior</label>
    <type>Checkbox</type>
</CustomField>