force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceCondicionesEspeciales__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceCondicionesEspeciales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Condiciones Especiales</label>
    <type>Checkbox</type>
</CustomField>