force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceConfiguracionCobertura__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceConfiguracionCobertura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Configuración de Coberturas</label>
    <type>Checkbox</type>
</CustomField>