force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceContributoriedad__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceContributoriedad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contributoriedad</label>
    <type>Checkbox</type>
</CustomField>