force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceConvenios__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceConvenios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convenios</label>
    <type>Checkbox</type>
</CustomField>