force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceDeducibles__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceDeducibles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deducibles</label>
    <type>Checkbox</type>
</CustomField>