force-app/main/default/objects/Quote/fields/ZRH_RegistroAvanceFondoLibreDisposicion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvanceFondoLibreDisposicion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fondo Libre Disposición</label>
    <type>Checkbox</type>
</CustomField>