force-app/main/default/objects/Quote/fields/ZRH_RegistroAvancePaqueteConveniosLinea__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvancePaqueteConveniosLinea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paquete de convenios en línea</label>
    <type>Checkbox</type>
</CustomField>