force-app/main/default/objects/Quote/fields/ZRH_RegistroAvancePaquetesDeAsistencias__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RegistroAvancePaquetesDeAsistencias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paquetes de asistencias</label>
    <type>Checkbox</type>
</CustomField>